<resources>
    <string name="app_name">BeamItUp</string>

    <!-- Titles -->
    <string name="title_activity_transfer_money">Transfer Money</string>
    <string name="title_activity_ready_transfer">Ready Transfer</string>
    <string name="title_activity_reply_transfer">Reply To Transfer</string>
    <string name="title_activity_finish_transfer">Finish Transfer</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_landing_page">Home</string>
    <string name="title_activity_add_eth">Add Ethereum Account</string>
    <string name="title_activity_receive_transfer">Receive Transfer</string>
    <string name="title_activity_main">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_reply_transfer">Create Transfer Reply</string>

    <!-- Keys -->
    <string name="amount_label">Amount:</string>
    <string name="reason_label">Reason:</string>
    <string name="receiver_address_label">Receiver Address:</string>
    <string name="sender_address_label">Sender Address:</string>
    <string name="status_label">Status:</string>

    <!-- Values -->
    <string name="amount_value">amount</string>
    <string name="reason_value">reason</string>
    <string name="receiver_address_value">receiver address</string>
    <string name="sender_address_value">sender address</string>
    <string name="status_value">status</string>

    <!-- Buttons -->
    <string name="btn_ready_reply">Ready Reply</string>
    <string name="btn_transfer_money">Transfer Money</string>
    <string name="btn_ready_transfer">Ready Transfer</string>
    <string name="btn_past_transfers">Transfer History</string>
    <string name="btn_add_eth">Add Ethereum Account</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_create_account">Create Account</string>

    <!-- Hints -->
    <string name="hint_private_key">Private Key</string>
    <string name="hint_eth_address">Ethereum Address</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_reason">Reason</string>
    <string name="hint_amount">Amount</string>

    <string name="transfer_succeeded">Transfer succeeded.</string>
    <string name="transfer_failed">Transfer failed.</string>
    <string name="tv_transfer_is_ready">Transfer is ready</string>
    <string name="tv_eth_id_default">Eth ID</string>
    <string name="tv_eth_address_default">Eth address</string>
    <string name="gas_used_label">Gas Used:</string>
    <string name="gas_used_value">gas used</string>
    <string name="transaction_gas_cost_label">Transaction gas cost:</string>
    <string name="transaction_gas_cost_value">…</string>
    <string name="title_activity_create_request">CreateRequestActivity</string>
    <string name="title_activity_ready_request">ReadyRequestActivity</string>
    <string name="title_activity_receive_request">ReceiveRequestActivity</string>
    <string name="title_activity_finish_request">FinishRequestActivity</string>
    <string name="btn_create_request">Create Request</string>
    <string name="to_address_label">To address:</string>
    <string name="to_address_value">to</string>
    <string name="btn_accept_request">Accept Request</string>
    <string name="btn_decline_request">Decline Request</string>
    <string name="et_eth_nickname">Nickname</string>
    <string name="et_eth_password">Password</string>
    <string name="tv_eth_nickname">Eth Nickname</string>
    <string name="tv_password">Password:</string>
    <string name="et_password">password</string>

</resources>
