<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.graeme.beamitup.request.ReadyRequestActivity"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount_label"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount_value"
            android:id="@+id/tv_amount_value"
            android:layout_weight="1"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/to_address_label"
            android:layout_weight="1"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/to_address_value"
            android:id="@+id/tv_to_address_value"
            android:layout_weight="1"
            android:layout_margin="16dp"/>

    </LinearLayout>

</LinearLayout>
