<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.graeme.beamitup.transfer.CreateTransferActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="16dp"
    >

    <fragment
        android:id="@+id/frag_eth_picker"
        android:name="com.example.graeme.beamitup.eth.EthPickerFragment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <EditText
        android:id="@+id/et_transfer_money_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:layout_margin="16dp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_gas_cost_label"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_gas_cost_value"
            android:layout_weight="1"
            android:id="@+id/tv_gas_cost_value"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_ready_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ready_transfer"
        android:layout_margin="16dp" />

</LinearLayout>
