<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="com.example.graeme.beamitup.account.CreateAccountActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_email"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:hint="@string/hint_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_create_account"
            android:text="@string/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
